--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
        <h3>electronicsleep.com</h3>
        </a>
 
-       <p class="lead">Hello, started programming computers by making websites, programs and artwork around 1998 for my music projects and never stopped learning. Recently mostly programming in Python, Go and Java. 
+       <p class="lead">Hello, started programming computers by making websites, programs and artwork around 1998 for my music projects and never stopped learning. Recently programming in Python, Go. 
 
        <h2>Music/Art Projects:</h2>
 
