--- a/public/projects.html
+++ b/public/projects.html
@@ -120,11 +120,16 @@
        <!-- thinkpad project -->
        <p><a name="thinkpad-t420"></a>
 
-       <p class="lead"><h3>Thinkpad t420 eGPU with GDC Beast Nvidia GT 730</h3>
+       <p class="lead"><h3>Thinkpad t420 eGPU with GDC Beast, Nvidia GeForce GT 730 or GeForce GTX 1050Ti</h3>
+
+       <p>ASUS Cerberus GeForce GTX 1050 Ti 4GB OC Edition GDDR5 Gaming Graphics Card (Cerberus-GTX1050Ti-O4G)
 
        <p class="lead">Installed the Nvidia GeForce GT 730 on Windows 10 with no major issues, even beat Dark Souls and enjoyed playing Steep a snowboarding game and Unreal Engine is working well. Impressed with how Windows 10 handles the eGPU with little to no configuration problems. Overall this project has been an incredible value: I bought the GDC beast for $40 and the laptop for $200 and the graphics card for $60 and can play most games and Windows 10 Pro was free with the laptop.
 
-       <p>Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution and have Ubuntu installed via Windows store for fun, so should be capable for light game development I think.
+       <p>Under GTX 1050Ti Windows 10 and Heaven benchmark got at 2457 score with max FPS of 189.1 at 1280x720 FS high resolution, should be capable for heavy game development. use nvidia driver (375.63)
+
+       <p>Under GT 730 Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, should be capable for light game development.
+
 
        <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering to get it working, after that though no issues whatsoever. First used an old power supply to power the eGPU then got the Dell DA-2 for about 15 dollars which I recommend to power everything. 
 
