--- a/public/projects.html
+++ b/public/projects.html
@@ -122,9 +122,7 @@
 
        <p class="lead"><h3>Thinkpad t420 eGPU with GDC Beast, Nvidia GeForce GT 730 or GeForce GTX 1050Ti</h3>
 
-       <p>ASUS Cerberus GeForce GTX 1050 Ti 4GB OC Edition GDDR5 Gaming Graphics Card (Cerberus-GTX1050Ti-O4G)
-
-       <p class="lead">Installed the Nvidia GeForce GT 730 on Windows 10 with no major issues, even beat Dark Souls and enjoyed playing Steep a snowboarding game and Unreal Engine is working well. Impressed with how Windows 10 handles the eGPU with little to no configuration problems. Overall this project has been an incredible value: I bought the GDC beast for $40 and the laptop for $200 and the graphics card for $60 and can play most games and Windows 10 Pro was free with the laptop.
+       <p class="lead">Wanted a computer for Game development and some Windows games. Installed the Nvidia GeForce GT 730 and 1050Ti on Windows 10 with no major issues, even beat Dark Souls and enjoyed playing Steep a snowboarding game and Unreal Engine is working well. Impressed with how Windows 10 handles the eGPU with no configuration problems. Overall this project has been an incredible value: I bought the GDC beast for $40 and the laptop for $200 and the graphics card for $60 for 730 / $150 for 1050Ti and can play most games, Windows 10 Pro was free with the laptop.
 
        <p>Under GTX 1050Ti Windows 10 and Heaven benchmark got at 2457 score with max FPS of 189.1 at 1280x720 FS high resolution, should be capable for heavy game development. use nvidia driver (375.63)
 
@@ -133,7 +131,7 @@
 
        <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering to get it working, after that though no issues whatsoever. First used an old power supply to power the eGPU then got the Dell DA-2 for about 15 dollars which I recommend to power everything. 
 
-       <p>The best thing about this laptop is replaceable battery (no screws) and easy access to replace the ssd drive (one screw), replaced the SSD and works with Windows 10 and Linux (dev server) well and possibilities for ram and cpu upgrades.
+       <p>The best thing about this laptop is cost, replaceable battery (no screws) and easy access to replace the ssd drive (one screw), replaced the SSD and works with Windows 10 and Linux (dev server) well and possibilities for ram and cpu upgrades.
 
 
        <!-- MediaPi -->
