--- a/public/projects.html
+++ b/public/projects.html
@@ -69,10 +69,10 @@
        <p clear="all"/>
        <h2>Debian OS Projects</h2>
 
-       <a href="#linux-tower">Linux Tower</a>
-       <br><a href="#thinkpad-t420">Thinkpad t420</a>
-       <br><a href="#mediapi">MediaPi</a>
-       <br><a href="#flashcards">FlashCards</a>
+       <a href="#linux-tower">Linux Tower - General purpose Linux Tower</a>
+       <br><a href="#thinkpad-t420">Thinkpad t420 - eGPU setup</a>
+       <br><a href="#mediapi">MediaPi - Rasberry Pi Media Box</a>
+       <br><a href="#flashcards">FlashCards - Memorization apps</a>
        <br><a href="#memoryecho">Memory Echo</a>
        <br><a href="#debiandesktop">DebianDesktop</a>
        <br><a href="#electronicsleep">ElectronicSleep</a>
