--- a/public/projects.html
+++ b/public/projects.html
@@ -73,8 +73,8 @@
        <br><a href="#thinkpad-t420">Thinkpad t420 - eGPU setup</a>
        <br><a href="#mediapi">MediaPi - Rasberry Pi Media Box</a>
        <br><a href="#flashcards">FlashCards - Memorization apps</a>
-       <br><a href="#memoryecho">Memory Echo</a>
-       <br><a href="#debiandesktop">DebianDesktop</a>
+       <br><a href="#memoryecho">Memory Echo - Musician collective</a>
+       <br><a href="#debiandesktop">DebianDesktop - Tools for desktops</a>
        <br><a href="#electronicsleep">ElectronicSleep</a>
        <br><a href="#systemcapture">SystemCapture</a>
        <br><a href="#yourideaspace">Your Idea Space</a>
