--- a/public/projects.html
+++ b/public/projects.html
@@ -75,11 +75,11 @@
        <br><a href="#flashcards">FlashCards - Memorization apps</a>
        <br><a href="#memoryecho">Memory Echo - Musician collective</a>
        <br><a href="#debiandesktop">DebianDesktop - Tools for desktops</a>
-       <br><a href="#electronicsleep">ElectronicSleep</a>
-       <br><a href="#systemcapture">SystemCapture</a>
-       <br><a href="#yourideaspace">Your Idea Space</a>
-       <br><a href="#ansible">AnsibleExamples</a>
-       <br><a href="#monitoring">Next Gen Monitoring</a>
+       <br><a href="#electronicsleep">ElectronicSleep - Electronic Music</a>
+       <br><a href="#systemcapture">SystemCapture - System resource capture</a>
+       <br><a href="#yourideaspace">Your Idea Space - Website framework</a>
+       <br><a href="#ansible">AnsibleExamples - Devops/Infra examples</a>
+       <br><a href="#monitoring">Next Gen Monitoring - Tools for monitoring</a>
 
        <!-- content -->
       
