--- a/public/projects.html
+++ b/public/projects.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
@@ -18,7 +18,7 @@
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/starter-template.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -57,7 +57,7 @@
 
     <div class="container">
 
-      <div class="starter-template">
+      <div class="template">
 
        <h1>Projects</h1>
 
@@ -82,10 +82,10 @@
        <br><a href="#monitoring">Next Gen Monitoring - Tools for monitoring</a>
 
        <!-- content -->
-      
 
        <!-- tower project -->
-       <p><a name="linux-tower"></a>
+
+       <p><a name="linux-tower"></a><hr>
 
        <p class="lead"><h3>Linux Tower / Nvidia GTX 950 GPU / M-Audio 1010LT </h3>
 
@@ -113,12 +113,10 @@
 
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card ($150) (optional)
 
-       <p>Total: $936 
-
-       <p>Total: $998 +M-Audio
+       <p>Total: $936 ($998 +M-Audio)
 
        <!-- thinkpad project -->
-       <p><a name="thinkpad-t420"></a>
+       <p><a name="thinkpad-t420"></a><hr>
 
        <p class="lead"><h3>Thinkpad t420 eGPU with GDC Beast, Nvidia GeForce GT 730 or GeForce GTX 1050Ti</h3>
 
@@ -129,84 +127,95 @@
        <p>Under GT 730 Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, should be capable for light game development.
 
 
-       <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering to get it working, after that though no issues whatsoever. First used an old power supply to power the eGPU then got the Dell DA-2 for about 15 dollars which I recommend to power everything. 
+       <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering to get it working, after that though no issues whatsoever. First used an old power supply to power the eGPU then got the Dell DA-2 for about 15 dollars which I recommend to power everything.
 
        <p>The best thing about this laptop is cost, replaceable battery (no screws) and easy access to replace the ssd drive (one screw), replaced the SSD and works with Windows 10 and Linux (dev server) well and possibilities for ram and cpu upgrades.
 
 
        <!-- MediaPi -->
-       <p><a name="mediapi"></a>
+       <p><a name="mediapi"></a><hr>
 
-       <p class="lead"><h3>Created a Rasberry Pi project <a href="https://github.com/electronicsleep/MediaPi" target="_blank">MediaPi</a>.</h3>
+       <p class="lead"><h3>Created a Rasberry Pi project for media display.</h3>
 
        <p>A way to show your videos or images at boot on a Rasberry Pi and rotate through your favorite pics/clips.
+       <p><a href="https://github.com/electronicsleep/MediaPi" target="_blank">MediaPi</a>
 
 
        <!-- FlashCards -->
-       <p><a name="flashcards"></a>
+       <p><a name="flashcards"></a><hr>
 
-       <p class="lead"><h3>Education project <a href="https://github.com/electronicsleep/FlashCards" target="_blank">FlashCards</a>.</h3>
+       <p class="lead"><h3>Flash Card Education project.</h3>
 
        <p>Programming project to show a simple flash card app in different languages: C++ / Java / Python / Bash
 
+       <p><a href="https://github.com/electronicsleep/FlashCards" target="_blank">FlashCards</a>
+
 
        <!-- Memory Echo project -->
-       <p><a name="memoryecho"></a>
+       <p><a name="memoryecho"></a><hr>
 
-       <p class="lead"><h3>Working on a project called <a href="http://www.memoryecho.com" target="_blank">Memory Echo</a>.</h3>
+       <p class="lead"><h3>Music collective project called Memory Echo.</h3>
 
        <p>Musicians and producers collaboration with music and art ideas and resources for electronic music in the bay.
 
        <p>Started out as a group of friends just making music: <a href="https://memoryechomusic.bandcamp.com/releases" target="_blank">Download compilation released Feb 2018</a>
 
+       <p><a href="http://www.memoryecho.com" target="_blank">Memory Echo</a>
+
 
        <!-- DebianDesktop -->
-       <p><a name="debiandesktop"></a>
+       <p><a name="debiandesktop"></a><hr>
 
-       <p class="lead"><h3>DebianDesktop <a href="https://github.com/electronicsleep/DebianDesktop" target="_blank">DebianDesktop</a>.</h3>
+       <p class="lead"><h3>Debian Desktop Tools and Configs.</h3>
 
-       <p> One line script to install a system with powerful tools, some extras too.
+       <p>One line script to install a system with powerful tools, some extras too.
+
+       <p><a href="https://github.com/electronicsleep/DebianDesktop" target="_blank">DebianDesktop</a>
 
 
        <!-- ElectronicSleep -->
-       <p><a name="electronicsleep"></a>
+       <p><a name="electronicsleep"></a><hr>
 
-       <p class="lead"><h3>Music project <a href="https://github.com/electronicsleep/electronicsleep" target="_blank">Electronicsleep</a>.</h3>
+       <p class="lead"><h3>Electronic Music project called Electronic Sleep.</h3>
 
-       <p>Playing around with my song Doze Dream and C++ SDL2 graphics
+       <p>Graphics experiment for my song Doze Dream and C++ SDL2 graphics
+
+       <p><a href="https://github.com/electronicsleep/electronicsleep" target="_blank">ElectronicSleep</a>
 
 
        <!-- SystemCapture -->
-       <p><a name="systemcapture"></a>
+       <p><a name="systemcapture"></a><hr>
 
-       <p class="lead"><h3>Created a project <a href="https://github.com/electronicsleep/SystemCapture" target="_blank">SystemCapture</a>.</h3>
+       <p class="lead"><h3>System metrics project called System Capture.</h3>
 
-       <p>Just a way to show your videos or images at boot
+       <p><a href="https://github.com/electronicsleep/SystemCapture" target="_blank">SystemCapture</a>
 
 
        <!-- Your Idea Space project -->
-       <p><a name="yourideaspace"></a>
+       <p><a name="yourideaspace"></a><hr>
 
-       <p class="lead"><h3>Working on a project called <a href="http://www.yourideaspace.com" target="_blank">Your Idea Space</a>.</h3>
+       <p class="lead"><h3>Web/App Project called Your Idea Space.</h3>
 
        <p>Started out as a way to build and design websites dynamically using a website building a framework I started in 2000.
 
+       <p><a href="http://www.yourideaspace.com" target="_blank">Your Idea Space</a>
+
 
        <!-- AnsibleExamples project -->
-       <p><a name="ansible"></a>
+       <p><a name="ansible"></a><hr>
 
        <p class="lead"><h3>Ansible and Python Examples</h3>
 
-       <p>Created a repo for training and showing others how to use Ansible and Python, they are powerful tools to do system automation and orchestration. I am happy to do talks and conferences to share knowledge. Check out the repo: <a href="https://github.com/electronicsleep/AnsibleExamples" target="_blank">AnsibleExamples</a> and <a href="http://www.yourideaspace.com/contact" target="_blank">Contact me</a>.
+       <p>Created a repo for training and showing others how to use Ansible and Python, they are powerful tools to do system automation and orchestration. I am happy to do talks and conferences to share knowledge. Check out the repo: <a href="https://github.com/electronicsleep/AnsibleExamples" target="_blank">AnsibleExamples</a> and <a href="http://www.yourideaspace.com/contact" target="_blank">Contact me</a>
 
 
        <!-- Monitoring project -->
-       <p><a name="monitoring"></a>
+       <p><a name="monitoring"></a><hr>
 
        <p class="lead"><h3>Icinga, Grafana, Prometheus and Nagios for monitoring</h3>
 
        <p> I am also familliar with DataDog, NewRelic but always looking to control my own metrics and monitroing systems to further automate, currently working on graphing all Icinga metrics in Grafana. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
-"_blank">AutoNagios</a>.
+"_blank">AutoNagios</a>
       </div>
 
     </div><!-- /.container -->
