--- a/public/projects.html
+++ b/public/projects.html
@@ -93,7 +93,6 @@
 
        <p class="lead">I use Ardour for audio recording on Linux for my studio and Blender, Krita and Gimp for artwork. Steam works really well and there are many great Linux games. The M-Audio Delta PCI card is not new but also is known for being a very stable reliable card.
 
-
        <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz) ($339)
 
        <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1 ($130)
@@ -115,19 +114,19 @@
 
        <p>Total: $936 ($998 +M-Audio)
 
+
        <!-- thinkpad project -->
        <p><a name="thinkpad-t420"></a><hr>
 
        <p class="lead"><h3>Thinkpad t420 eGPU with GDC Beast, Nvidia GeForce GT 730 or GeForce GTX 1050Ti</h3>
 
-       <p class="lead">Wanted a computer for Game development and some Windows games. Installed the Nvidia GeForce GT 730 and 1050Ti on Windows 10 with no major issues, even beat Dark Souls and enjoyed playing Steep a snowboarding game and Unreal Engine is working well. Impressed with how Windows 10 handles the eGPU with no configuration problems. Overall this project has been an incredible value: I bought the GDC beast for $40 and the laptop for $200 and the graphics card for $60 for 730 / $150 for 1050Ti and can play most games, Windows 10 Pro was free with the laptop.
+       <p class="lead">Wanted a computer for Game development and some Windows games. Installed the Nvidia GeForce GT 730 and later upgraded to the 1050Ti on Windows 10 with no major issues, no issues with great graphical games like Dark Souls 1 (with GT 730) or 3 (with GTX 1050ti) and enjoyed playing Steep a fun casual snowboarding game and Unreal Engine is working well. Impressed with how Windows 10 handles the eGPU with no configuration problems. Overall this project has been an incredible value: I bought the GDC beast for $40 and the laptop for $200 and GPU GT 730 for $60 / $150 for GTX 1050Ti and can play most games. Also nice thing was Windows 10 Pro was included with the $200 laptop.
 
-       <p>Under GTX 1050Ti Windows 10 and Heaven benchmark got at 2457 score with max FPS of 189.1 at 1280x720 FS high resolution, should be capable for heavy game development. use nvidia driver (375.63)
+       <p>With the GTX 1050Ti Windows 10 and Heaven benchmark got at 2457 score with max FPS of 189.1 at 1280x720 FS high resolution, should be capable for regular game development. use nvidia driver (375.63)
 
-       <p>Under GT 730 Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, should be capable for light game development.
+       <p>With the GT 730 Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, should be capable for light game development.
 
-
-       <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering to get it working, after that though no issues whatsoever. First used an old power supply to power the eGPU then got the Dell DA-2 for about 15 dollars which I recommend to power everything.
+       <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering at first to get it working, after that though no issues whatsoever. First used an old power supply to power the eGPU then got the Dell DA-2 for about 15 dollars which I recommend to power everything. (tip: if the card does not get detected at boot for software update reasons or whatever reinstall the nvidia drivers)
 
        <p>The best thing about this laptop is cost, replaceable battery (no screws) and easy access to replace the ssd drive (one screw), replaced the SSD and works with Windows 10 and Linux (dev server) well and possibilities for ram and cpu upgrades.
 
