--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
        <h3>electronicsleep.com</h3>
        </a>
 
-       <p class="lead">Hello, started programming computers by making websites, programs and artwork around 1998 for my music projects and never stopped learning. Recently programming in Python, Go. 
+       <p class="lead">Hello. I started programming computers by making graphics, websites, programs and artwork around 1998 for my music projects and never stopped learning. Recently programming in Python, Go and many other languages.
 
        <h2>Music/Art Projects:</h2>
 
