--- a/public/projects.html
+++ b/public/projects.html
@@ -134,7 +134,7 @@
        <!-- MediaPi -->
        <p><a name="mediapi"></a><hr>
 
-       <p class="lead"><h3>Created a Rasberry Pi project for media display.</h3>
+       <p class="lead"><h3>Created a Rasberry Pi project for media display</h3>
 
        <p>A way to show your videos or images at boot on a Rasberry Pi and rotate through your favorite pics/clips.
        <p><a href="https://github.com/electronicsleep/MediaPi" target="_blank">MediaPi</a>
@@ -143,7 +143,7 @@
        <!-- FlashCards -->
        <p><a name="flashcards"></a><hr>
 
-       <p class="lead"><h3>Flash Card Education project.</h3>
+       <p class="lead"><h3>Flash Card Education project</h3>
 
        <p>Programming project to show a simple flash card app in different languages: C++ / Java / Python / Bash
 
@@ -153,7 +153,7 @@
        <!-- Memory Echo project -->
        <p><a name="memoryecho"></a><hr>
 
-       <p class="lead"><h3>Music collective project called Memory Echo.</h3>
+       <p class="lead"><h3>Music collective project called Memory Echo</h3>
 
        <p>Musicians and producers collaboration with music and art ideas and resources for electronic music in the bay.
 
@@ -165,7 +165,7 @@
        <!-- DebianDesktop -->
        <p><a name="debiandesktop"></a><hr>
 
-       <p class="lead"><h3>Debian Desktop Tools and Configs.</h3>
+       <p class="lead"><h3>Debian Desktop Tools and Configs</h3>
 
        <p>One line script to install a system with powerful tools, some extras too.
 
@@ -175,7 +175,7 @@
        <!-- ElectronicSleep -->
        <p><a name="electronicsleep"></a><hr>
 
-       <p class="lead"><h3>Electronic Music project called Electronic Sleep.</h3>
+       <p class="lead"><h3>Electronic Music project called Electronic Sleep</h3>
 
        <p>Graphics experiment for my song Doze Dream and C++ SDL2 graphics
 
@@ -185,7 +185,7 @@
        <!-- SystemCapture -->
        <p><a name="systemcapture"></a><hr>
 
-       <p class="lead"><h3>System metrics project called System Capture.</h3>
+       <p class="lead"><h3>System metrics project called System Capture</h3>
 
        <p><a href="https://github.com/electronicsleep/SystemCapture" target="_blank">SystemCapture</a>
 
@@ -193,7 +193,7 @@
        <!-- Your Idea Space project -->
        <p><a name="yourideaspace"></a><hr>
 
-       <p class="lead"><h3>Web/App Project called Your Idea Space.</h3>
+       <p class="lead"><h3>Web/App Project called Your Idea Space</h3>
 
        <p>Started out as a way to build and design websites dynamically using a website building a framework I started in 2000.
 
