--- a/public/about.html
+++ b/public/about.html
@@ -66,7 +66,7 @@
         <h3>github.com/electronicsleep</h3>
         </a>
 
-        <p class="lead">Born in Arizona and moved to the SF Bay Area in 2011. Working as a software engineer and electronic musician that enjoys learning about the creative side of computing. Started making electronic music in 1996 using a bass guitar, drum machine and later a computer.
+        <p class="lead">Born in Arizona and moved to the SF Bay Area in 2011. Working as a software engineer and electronic musician that enjoys learning about the creative side of computing. Started making electronic music and playing bass guitar in 1996.
       </div>
 
     </div><!-- /.container -->
