--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,8 @@
        <p><a href="http://www.ladyada.net/make/x0xb0x/" class="btn btn-info" target="_blank">x0xb0x</a>
        <p><a href="http://www.nvidia.com" class="btn btn-info" target="_blank">Nvidia</a>
        <p><a href="https://www.blender.org" class="btn btn-info" target="_blank">Blender</a>
+       <p><a href="https://www.godotengine.org" class="btn btn-info" target="_blank">Godot</a>
+       <p><a href="https://www.unity3d.com" class="btn btn-info" target="_blank">Unity</a>
        <p><a href="https://www.unrealengine.com" class="btn btn-info" target="_blank">Unreal</a>
        <p><a href="https://www.roku.com" class="btn btn-info" target="_blank">Roku</a>
        <p><a href="https://developer.apple.com/opensource/" class="btn btn-info" target="_blank">Apple</a>
