--- a/public/projects.html
+++ b/public/projects.html
@@ -217,6 +217,10 @@
 "_blank">AutoNagios</a>
       </div>
 
+
+       <p class="lead">Projects on GitHub: <a href="https://github.com/electronicsleep" target="_blank">github.com/electronicsleep</a>
+
+
     </div><!-- /.container -->
 
 
